fixed layout responsiveness and datatable action overlapping issue

--- a/raaghu-react-themes/src/styles/responsive.scss
+++ b/raaghu-react-themes/src/styles/responsive.scss
@@ -25,6 +25,19 @@
     max-width: 190px;
   }
 
+  .left-action{
+    thead{
+      th{
+        background-color: #fff !important;
+      }
+    }
+    tbody{
+      td{
+        background-color: #fff !important;
+      }
+    }
+  }
+
   thead {
     white-space: nowrap;
   }
